infra/helm-charts/ingress-nginx/https_ingress_letzencrypt.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.ahamedyaserarafath.com
    secretName: app-secret
  rules:
    - host: app.ahamedyaserarafath.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-webapp
                port:
                  number: 8080
